--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -1,5 +1,5 @@
 <script>
-var title = 'community-vue';
+var title = 'pando-lots-vue';
 document.title = title;
 var observer = new MutationObserver(function(mutations) {
   if (document.title.match(/Storybook$/) && title !== document.title) {
